--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,30 +1,22 @@
 <body class="body-index">
-  
-<div class="credentials-div">
-  <h2 class="titles">Log In</h2>
-
-  <form action="/auth/login" method="POST">
-<div class="credentials-details">
-    <label class="crud-labels">Username: <br>
-      <input class="input-text-crud" type="text" name="username" placeholder="Your username" />
-    </label>
-<br>
-    <label class="crud-labels">Email: <br>
-      <input class="input-text-crud" type="email" name="email" placeholder="Your email" />
-    </label>
-<br>
-    <label class="crud-labels">Password: <br>
-      <input class="input-text-crud" type="password" name="password" placeholder="Your password" />
-    </label>
-
-    <button class="btn custom-btn btn2-lp"  id="btn2-lp" type="submit">Log In</button>
-</form>
-
-    {{#if errorMessage}}
-      <p class="error" id="error-credentials">{{errorMessage}}</p>
-    {{/if}}
-    
-</div>
-</div>
-
+  <div class="container-fluid h-100 d-flex flex-column justify-content-start align-items-center mt-4">
+    <h1 class="mt-4 text-center titles">Log In</h1>
+    <div class="p-4 mx-auto rounded d-md-flex d-lg-flex" style="background-color: rgb(240, 240, 240);">
+      <form class="d-flex flex-column justify-content-center w-100 mx-auto">
+        <div class="form-group mx-auto" style="max-width: 400px;">
+          <label class="crud-labels" for="username">Username</label>
+          <input type="text" name="username" class="form-control" id="username" placeholder="Enter username">
+        </div>
+        <div class="form-group mx-auto" style="max-width: 400px;">
+          <label class="crud-labels" for="email">Email address</label>
+          <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
+        </div>
+        <div class="form-group mx-auto" style="max-width: 400px;">
+          <label class="crud-labels" for="password">Password</label>
+          <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn custom-btn btn2-lp mx-auto" id="btn2-lp" style="max-width: 400px;">Submit</button>
+      </form>
+    </div>
+  </div>
 </body>
