--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,18 +2,18 @@
   <div class="container-fluid h-100 d-flex flex-column justify-content-start align-items-center mt-4">
     <h1 class="mt-4 text-center titles">Sign Up</h1>
     <div class="p-4 mx-auto rounded d-md-flex d-lg-flex" style="background-color: rgb(240, 240, 240);">
-      <form class="d-flex flex-column justify-content-center w-100 mx-auto">
+      <form class="d-flex flex-column justify-content-center w-100 mx-auto"  action="/auth/signup" method="POST">
         <div class="form-group mx-auto" style="max-width: 400px;">
-          <label class="crud-labels" for="username">Username</label>
-          <input type="text" name="username" class="form-control" id="username" placeholder="Enter username">
+          <label class="crud-labels">Username</label>
+          <input type="text" name="username" class="form-control" placeholder="Enter username">
         </div>
         <div class="form-group mx-auto" style="max-width: 400px;">
-          <label class="crud-labels" for="email">Email address</label>
-          <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
+          <label class="crud-labels">Email address</label>
+          <input type="email" name="email" class="form-control" placeholder="Enter email">
         </div>
         <div class="form-group mx-auto" style="max-width: 400px;">
-          <label class="crud-labels" for="password">Password</label>
-          <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+          <label class="crud-labels">Password</label>
+          <input type="password" name="password" class="form-control" placeholder="Password">
         </div>
         <button type="submit" class="btn custom-btn btn1-lp mx-auto" id="btn1-lp"
           style="max-width: 400px;">Submit</button>
@@ -27,35 +27,3 @@
     </div>
   </div>
 </body>
-{{!--
-
-<body class="body-index">
-  <div class="credentials-div">
-    <h2 class="titles">Sign Up</h2>
-
-
-    <form action="/auth/signup" method="POST">
-      <div class="credentials-details">
-        <label class="crud-labels"> Username: <br>
-          <input class="input-text-crud" type="text" name="username" placeholder="Your username" />
-        </label>
-        <br>
-
-        <label class="crud-labels"> Email: <br>
-          <input class="input-text-crud" type="email" name="email" placeholder="Your email" />
-        </label>
-        <br>
-
-        <label class="crud-labels"> Password: <br>
-          <input class="input-text-crud" type="password" name="password" placeholder="Your password" />
-        </label>
-
-        <button class="btn custom-btn btn1-lp" id="btn1-lp" type="submit">Sign Up</button>
-    </form>
-
-    {{#if errorMessage}}
-    <p class="error" id="error-credentials">{{errorMessage}}</p>
-    {{/if}}
-  </div>
-  </div>
-</body> --}}
