--- a/views/posts/post-details.hbs
+++ b/views/posts/post-details.hbs
@@ -145,7 +145,7 @@
 
    <hr>
    <!-- Comments thread will appear here for the specific post -->
-   <h2 id="comment_thread" class="text-primary">Comments for this thread:</h2>
+   <h2 id="comment_thread">Comments for this thread:</h2>
 
 
 
