--- a/views/posts/post-edit.hbs
+++ b/views/posts/post-edit.hbs
@@ -16,13 +16,13 @@
     enctype="multipart/form-data">
     <label class="crud-labels">
       Title:
-      <input class="form-control" style="width: 800px;" type="text" name="title" value="{{postDetails.title}}" />
+      <input class="input-text-crud" type="text" name="title" value="{{postDetails.title}}" />
     </label>
     <br>
 
     <label class="crud-labels">
       Text:
-      <textarea class="form-control" name="text" cols="60" rows="4">{{postDetails.text}}</textarea>
+      <textarea class="form-control" name="text" cols="34" rows="4">{{postDetails.text}}</textarea>
     </label>
     <br>
 
