--- a/views/subreddit/list.hbs
+++ b/views/subreddit/list.hbs
@@ -1,7 +1,10 @@
 <div class="crud-div">
-  <a href="javascript:history.back()"><button class="btn custom-btn btn1-lp" id="go-back-btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
-</svg>Go Back</button></a>
+  <a href="javascript:history.back()"><button class="btn custom-btn btn1-lp" id="go-back-btn"><svg
+        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+      </svg>Go Back</button></a>
 </div>
 
 <div class="view-container">
@@ -12,73 +15,75 @@
     <input type="text" class="form-control" id="search" name="querry" placeholder="Search" />
 
     <div class="filtbtn"></div>
-    <button type="submit" class="btn custom-btn btn1-lp" id="btn-up-edit">Submit</button>
+    <button type="submit" class="btn custom-btn btn1-lp" id="btn-up-edit" style="width: 120px; font-size: 16px;">Submit</button>
 
   </form>
 
   {{#if filteredSubreddits}}
 
-    <a href="/subreddit"><button class="btn custom-btn btn1-lp" id="crud-btn-update" style="margin-top:20px; margin-bottom: 20px;" type="submit">Clear Filters </button></a>
+  <a href="/subreddit"><button class="btn custom-btn btn1-lp" id="crud-btn-update"
+      style="margin-top:20px; margin-bottom: 20px;" type="submit">Clear Filters </button></a>
 
-    <section class="subreddit-list">
+  <section class="subreddit-list">
 
-      {{#each filteredSubreddits}}
-        <a href="/subreddit/{{_id}}">
-          <div class="subreddit-list-card">
-            <div class="card-top-subreddit"><h3 class="card-title"> {{name}}</h3></div>
-            <div class="card-middle-subreddit">
-              <div call="card-middle-data">
-                <p class="card-text">{{description}}</p>
-                <p>created:{{formatDate createdAt}}
-                </p>
-
-              </div>
-
-              <div class="card-bottom"><img src={{img}} width="100px" /></div>
-
-            </div>
+    {{#each filteredSubreddits}}
+    <a href="/subreddit/{{_id}}">
+      <div class="subreddit-list-card">
+        <div class="card-top-subreddit">
+          <h5>{{name}}</h5>
+        </div>
+        <div class="card-middle-subreddit">
+          <div class="card-middle-data">
+            <p class="card-text">{{description}}</p>
+            <p>created:{{formatDate createdAt}}
+            </p>
 
           </div>
-        </a>
-      {{/each}}
 
-    </section>
+          <div class="card-bottom"><img src={{img}} width="100px" /></div>
+
+        </div>
+
+      </div>
+    </a>
+    {{/each}}
+
+  </section>
   {{/if}}
 
   <br />
-
-  {{!-- {{#unless !filteredSubreddits}} --}}
+  
   <section class="subreddit-list">
     {{#unless filteredSubreddits}}
-<div class="sd-buttons">
-  <form action="/subreddit/create" method="get">
-  <button class="btn custom-btn btn1-lp" id="crud-btn-update" style="width: 220px; margin-bottom: 20px;">Create a Community</button>
-  </form>
-  </div>
-      {{#each subreddits}}
-        <a href="subreddit/{{_id}}">
-          <div class="subreddit-list-card">
-            <div class="card-top-subreddit"><h3 class="card-title"> {{name}}</h3></div>
-            <div class="card-middle-subreddit">
-              <div call="card-middle-data">
-                <p class="card-text">{{description}}</p>
-                <p>created:{{formatDate createdAt}}
-                </p>
-
-              </div>
-
-              <div class="card-bottom"><img src={{img}} width="100px" /></div>
-
-            </div>
+    <div class="sd-buttons">
+      <form action="/subreddit/create" method="get">
+        <button class="btn custom-btn btn1-lp" id="crud-btn-update" style="width: 180px; margin-bottom: 20px;">Create a
+          Community</button>
+      </form>
+    </div>
+    {{#each subreddits}}
+    <a href="subreddit/{{_id}}">
+      <div class="subreddit-list-card">
+        <div class="card-top-subreddit">
+          <h3 class="card-title"> {{name}}</h3>
+        </div>
+        <div class="card-middle-subreddit">
+          <div call="card-middle-data">
+            <p class="card-text">{{description}}</p>
+            <p>created:{{formatDate createdAt}}
+            </p>
 
           </div>
-        </a>
-      {{/each}}
+
+          <div class="card-bottom"><img src={{img}} width="100px" /></div>
+
+        </div>
+
+      </div>
+    </a>
+    {{/each}}
     {{/unless}}
 
   </section>
 
-  {{!-- {{/if}} --}}
-
-  
 </div>
