--- a/views/posts/new-post.hbs
+++ b/views/posts/new-post.hbs
@@ -15,7 +15,7 @@
 
         {{#if allSubreddits}}
         <label class="crud-labels">Select Community:
-            <select class="form-select" id="crud-select" name="subreddit">
+            <select class="form-select mb-4" name="subreddit">
                 {{#each allSubreddits}}
                 <option value="{{this._id}}">{{this.name}}</option>
                 {{/each}}
@@ -30,7 +30,7 @@
         <br>
 
         <label class="crud-labels">Text:
-            <textarea class="form-control" name="text" cols="60" rows="4" placeholder="Enter a text"/></textarea>
+            <textarea class="form-control" name="text" cols="34" rows="4" placeholder="Enter a text" /></textarea>
         </label>
         <br>
 
@@ -39,7 +39,7 @@
         </label>
         <br>
 
-        <button type="submit" class="btn custom-btn btn1-lp" id="crud-btn-update">Create Post</button>
+        <button type="submit" class="btn custom-btn btn1-lp mb-4" id="crud-btn-update">Create Post</button>
 </div>
 
 
