--- a/views/subreddit/edit.hbs
+++ b/views/subreddit/edit.hbs
@@ -8,21 +8,21 @@
 </div>
 
 <div class="crud-div">
-<h1>Edit {{subreddit.name}}</h1>
-<hr class="crud-bar">
+  <h1>Edit {{subreddit.name}}</h1>
+  <hr class="crud-bar">
 
-<form action="/subreddit/{{subreddit._id}}/edit" method="post" enctype="multipart/form-data">
-      <label class="crud-labels" style="width: 800px;" for="name">Title
-      <input type="text" class="form-control" id="name" name="name" value="{{subreddit.name}}">
-      </label>
+  <form action="/subreddit/{{subreddit._id}}/edit" method="post" enctype="multipart/form-data">
+    <label class="crud-labels" for="name">Title
+      <input type="text" class="input-text-crud" id="name" name="name" value="{{subreddit.name}}">
+    </label>
 
-      <br>
+    <br>
 
-      <label class="crud-labels" style="width: 800px;" for="description">Description
-      <input type="text" class="form-control" id="description" name="description" value="{{subreddit.description}}">
-      </label>
+    <label class="crud-labels" for="description">Description
+      <input type="text" class="input-text-crud" id="description" name="description" value="{{subreddit.description}}">
+    </label>
 
-      <br>
+    <br>
 
     <label class="crud-labels">Picture:
       <input class="crud-img" type="file" name="img" />
@@ -30,5 +30,5 @@
 
     <br>
 
-   <button class="btn custom-btn btn1-lp" id="crud-btn-update" type="submit" class="btn btn-primary">Submit</button>
+    <button class="btn custom-btn btn1-lp" id="crud-btn-update" type="submit" class="btn btn-primary">Submit</button>
 </div>
