--- a/views/users/user-delete.hbs
+++ b/views/users/user-delete.hbs
@@ -14,7 +14,10 @@
     <h4>Are you sure you don't want to reconsider? Once you delete your account, there's no getting it back.</h4>
     <br>
     <form action="/auth/profile/{{userInSession._id}}/delete" method="post">
-        <input class="input-text-crud" type="text" name="userDeletion" placeholder="Type in your username"> <br>
+    <label class="crud-labels">Type in your username
+        <input class="input-text-crud mb-4" type="text" name="userDeletion" placeholder="Your username"> <br>
+    </label>
+    <br>
         <button class="btn custom-btn btn1-lp" id="crud-btn-delete">Delete my account</button>
     </form>
 
