--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,27 @@
-
 <body class="body-index">
-  <header class="header-lp">
- <!-- Jumbotron -->
-  <div class="img-lp">
-    <div class="lp">
-    <h1 class="mingle-lp">mingle</h1>
-    <h4>Welcome to your one stop for all information</h4>
-    <hr class="line-lp">
 
-    <a class="btn custom-btn btn1-lp" id="btn1-lp" href="subreddit" role="button">Communities</a>
-<br>
-    <a class="btn custom-btn btn2-lp" id="btn2-lp" href="/subreddit/create" role="button">Create a Community</a>
-     <a class="btn custom-btn btn2-lp"id="btn2-lp" href="post/create" role="button">Create a Post</a>
+  <div class="img-lp">
+    <div class="mt-5">
+      <h1 class="mingle-lp">mingle</h1>
+      <h4>Welcome to your one stop for all information</h4>
+      <hr class="line-lp">
+
+      <div class="container-fluid lp">
+        <div class="d-flex flex-row mb-4 mt-5 lp">
+          <div class="d-flex flex-column lp">
+          <a class="btn custom-btn btn1-lp" id="btn1-lp" href="subreddit" role="button">Communities</a>
+        </div>
+        </div>
+        <div class="d-flex flex-row flex-wrap mb-4 lp">
+          <div class="d-flex flex-column mb-4 me-md-4 lp">
+            <a class="btn custom-btn btn2-lp" id="btn2-lp" href="/subreddit/create" role="button">Create a Community</a>
+          </div>
+          <div class="d-flex flex-column mb-4 lp">
+            <a class="btn custom-btn btn2-lp" id="btn2-lp" href="post/create" role="button">Create a Post</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <!-- Jumbotron -->
-</header>
+
 </body>
